调整优化图标

--- a/mobile/src/main/res/layout/content_l_obd.xml
+++ b/mobile/src/main/res/layout/content_l_obd.xml
@@ -48,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentBottom="true"
+            app:layout_marginBottomPercent="5%h"
             app:layout_heightPercent="12%h">
 
             <TextView
