--- a/mobile/src/main/res/layout/content_l_prompt.xml
+++ b/mobile/src/main/res/layout/content_l_prompt.xml
@@ -46,7 +46,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_l_tp"
                 app:layout_widthPercent="100%h" />
 
             <ImageView
@@ -54,7 +53,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_l_obd"
                 app:layout_widthPercent="100%h" />
 
             <ImageView
@@ -62,23 +60,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_l_fk"
                 app:layout_widthPercent="100%h" />
 
-            <ImageView
-                android:id="@+id/iv_ble"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_l_ble"
-                app:layout_widthPercent="100%h" />
+            <!--<ImageView-->
+            <!--android:id="@+id/iv_ble"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:contentDescription="@string/app_name"-->
+            <!--app:layout_widthPercent="100%h" />-->
 
             <ImageView
                 android:id="@+id/iv_wifi"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_l_wifi"
                 app:layout_widthPercent="100%h" />
 
             <ImageView
