--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -84,7 +84,6 @@
             android:indeterminate="false"
             android:max="100"
             android:progress="0"
-            android:progressDrawable="@drawable/n_music_progress"
             android:visibility="gone"
             app:layout_marginLeftPercent="2%h"
             app:layout_marginRightPercent="2%h"
@@ -99,35 +98,51 @@
             app:layout_heightPercent="18%h"
             app:layout_marginTopPercent="5%h">
 
-
-            <ImageView
+            <LinearLayout
                 android:id="@+id/ll_prew"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitCenter"
-                app:layout_heightPercent="77%h"
-                app:layout_marginRightPercent="20%h"
-                app:layout_widthPercent="77%h" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
 
-            <ImageView
-                android:id="@+id/iv_play"
+                <ImageView
+                    android:id="@+id/iv_prew"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_play"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitCenter"
-                app:layout_heightPercent="100%h"
-                app:layout_widthPercent="100%h" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
 
-            <ImageView
+                <ImageView
+                    android:id="@+id/iv_play"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/ll_next"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/app_name"
-                android:scaleType="fitCenter"
-                app:layout_heightPercent="77%h"
-                app:layout_marginLeftPercent="20%h"
-                app:layout_widthPercent="77%h" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/iv_next"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter" />
+            </LinearLayout>
         </com.zhy.android.percent.support.PercentLinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
 </com.zhy.android.percent.support.PercentFrameLayout>
