--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -45,8 +45,12 @@
     <color name="l_title_cb">#fbfbfb</color>
 
     <color name="l_msg">#666f80</color>
-    <color name="l_msg_b">#eee</color>
-    <color name="l_msg_cb">#fbfbfb</color>
+    <color name="l_msg_b">#fbfbfb</color>
+    <color name="l_msg_cb">#adadad</color>
+
+    <color name="l_content">#333e54</color>
+    <color name="l_content_b">#eee</color>
+    <color name="l_content_cb">#fbfbfb</color>
 
     <color name="l_text1">#333e54</color>
     <color name="l_text1_b">#eee</color>
@@ -68,10 +72,18 @@
     <color name="line_b">#666f80</color>
     <color name="line_cb">#0c1414</color>
 
+    <!--音乐相关-->
     <color name="l_music_title">#697380</color>
     <color name="l_music_title_b">#eee</color>
     <color name="l_music_title_cb">#fbfbfb</color>
 
     <color name="l_music_zuozhe">#7b8391</color>
     <color name="l_music_zuozhe_b">#818796</color>
+    <color name="l_music_zuozhe_cb">#818796</color>
+
+
+    <!--图标的颜色-->
+    <!--<color name="l_msg">#666f80</color>-->
+    <!--<color name="l_msg_b">#fbfbfb</color>-->
+    <!--<color name="l_msg_cb">#fbfbfb</color>-->
 </resources>
