--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_marginLeftPercent="2%h"
         app:layout_marginRightPercent="2%h">
 
@@ -135,27 +136,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
         app:layout_marginLeftPercent="2%h"
         app:layout_marginRightPercent="2%h">
 
-        <com.meetsl.scardview.SCardView
-            android:id="@+id/fl_luxian"
+        <FrameLayout
+            android:id="@+id/fl_navinfo_root"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_below="@id/fl_top"
-            android:background="@android:color/transparent"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="5dp"
-            app:cardLightDirection="none"
-            app:cardPreventCornerOverlap="false"
-            app:cardUseCornerArea="true"
             app:layout_heightPercent="22%h"
             app:layout_marginTopPercent="12%h">
 
             <com.zhy.android.percent.support.PercentRelativeLayout
-                android:id="@+id/rl_view1"
+                android:id="@+id/rl_navinfo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -208,13 +200,13 @@
                     app:layout_heightPercent="54%h"
                     app:layout_textSizePercent="22%h" />
             </com.zhy.android.percent.support.PercentRelativeLayout>
-        </com.meetsl.scardview.SCardView>
+        </FrameLayout>
 
         <com.zhy.android.percent.support.PercentLinearLayout
             android:id="@+id/ll_xiansu"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_below="@id/fl_luxian"
+            android:layout_below="@id/fl_navinfo_root"
             android:orientation="vertical"
             app:layout_heightPercent="14%h"
             app:layout_marginLeftPercent="3%h"
@@ -317,7 +309,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/ll_controller"
-            android:layout_below="@id/fl_luxian">
+            android:layout_below="@id/fl_navinfo_root">
 
             <ImageView
                 android:id="@+id/iv_road"
@@ -344,7 +336,7 @@
             android:layout_width="5dp"
             android:layout_height="wrap_content"
             android:layout_above="@id/ll_controller"
-            android:layout_below="@id/fl_luxian"
+            android:layout_below="@id/fl_navinfo_root"
             android:layout_alignParentRight="true"
             app:layout_marginBottomPercent="10%h"
             app:layout_marginRightPercent="2%h"
