--- a/mobile/src/main/res/layout/content_l_page.xml
+++ b/mobile/src/main/res/layout/content_l_page.xml
@@ -1,69 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-
-    <com.meetsl.scardview.SCardView
-        android:id="@+id/sv_1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
-        app:cardLightDirection="none"
-        app:cardPreventCornerOverlap="false"
-        app:cardShadowEndColor="#01000000"
-        app:cardShadowStartColor="#20000000"
-        app:cardUseCornerArea="true" />
-
-    <com.meetsl.scardview.SCardView
-        android:id="@+id/sv_2"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
-        app:cardLightDirection="none"
-        app:cardPreventCornerOverlap="false"
-        app:cardShadowEndColor="#01000000"
-        app:cardShadowStartColor="#20000000"
-        app:cardUseCornerArea="true" />
-
-    <com.meetsl.scardview.SCardView
-        android:id="@+id/sv_3"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
-        app:cardLightDirection="none"
-        app:cardPreventCornerOverlap="false"
-        app:cardShadowEndColor="#01000000"
-        app:cardShadowStartColor="#20000000"
-        app:cardUseCornerArea="true" />
-
-    <com.meetsl.scardview.SCardView
-        android:id="@+id/sv_4"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
-        app:cardLightDirection="none"
-        app:cardPreventCornerOverlap="false"
-        app:cardShadowEndColor="#01000000"
-        app:cardShadowStartColor="#20000000"
-        app:cardUseCornerArea="true" />
-</LinearLayout>
+    android:orientation="horizontal" />
