--- a/mobile/src/main/res/layout/console_window.xml
+++ b/mobile/src/main/res/layout/console_window.xml
@@ -18,13 +18,14 @@
         app:layout_widthPercent="60%w">
 
         <com.zhy.android.percent.support.PercentLinearLayout
+            android:id="@+id/ll_item1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:background="@drawable/n_l_postion"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_time"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -35,6 +36,7 @@
                 app:layout_textSizePercent="70%h" />
 
             <TextView
+                android:id="@+id/tv_app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -45,11 +47,11 @@
         </com.zhy.android.percent.support.PercentLinearLayout>
 
         <com.zhy.android.percent.support.PercentLinearLayout
+            android:id="@+id/ll_item2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="4dp"
             android:layout_weight="4"
-            android:background="@drawable/n_l_postion"
             android:orientation="horizontal">
 
             <com.zhy.android.percent.support.PercentLinearLayout
@@ -127,12 +129,12 @@
         </com.zhy.android.percent.support.PercentLinearLayout>
 
         <com.zhy.android.percent.support.PercentLinearLayout
+            android:id="@+id/ll_item3"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="4dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="4"
-            android:background="@drawable/n_l_postion"
             android:orientation="horizontal">
 
             <com.wow.carlauncher.common.view.CustomRoundAngleImageView
@@ -174,6 +176,7 @@
                     android:gravity="center">
 
                     <ImageView
+                        android:id="@+id/music_iv_prew"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:src="@mipmap/ic_prev2"
@@ -205,6 +208,7 @@
                     android:gravity="center">
 
                     <ImageView
+                        android:id="@+id/music_iv_next"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:src="@mipmap/ic_next2"
