--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -26,108 +26,112 @@
             app:layout_textSizePercent="50%h" />
     </com.zhy.android.percent.support.PercentFrameLayout>
 
-    <com.zhy.android.percent.support.PercentRelativeLayout
+    <FrameLayout
         android:id="@+id/rl_moren"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_marginLeftPercent="2%h"
-        app:layout_marginRightPercent="2%h">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/iv_moren"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:contentDescription="@string/app_name"
-            app:layout_heightPercent="45%w"
-            app:layout_widthPercent="45%w" />
+            android:scaleType="fitXY" />
 
-        <LinearLayout
+        <com.zhy.android.percent.support.PercentRelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_alignParentBottom="true"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_heightPercent="15%h">
+            android:layout_height="match_parent"
+            app:layout_marginLeftPercent="2%h"
+            app:layout_marginRightPercent="2%h">
 
-            <View
-                android:id="@+id/line1"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp" />
+                android:layout_height="0dp"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_heightPercent="15%h">
 
-            <com.zhy.android.percent.support.PercentLinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                <View
+                    android:id="@+id/line1"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp" />
 
                 <com.zhy.android.percent.support.PercentLinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="left">
+                    android:orientation="horizontal">
 
                     <com.zhy.android.percent.support.PercentLinearLayout
-                        android:id="@+id/btn_gd"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="left">
+
+                        <com.zhy.android.percent.support.PercentLinearLayout
+                            android:id="@+id/btn_gd"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            app:layout_widthPercent="100%h">
+
+                            <ImageView
+                                android:id="@+id/iv_dh"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                app:layout_heightPercent="60%h"
+                                app:layout_widthPercent="60%h" />
+                        </com.zhy.android.percent.support.PercentLinearLayout>
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+
+                    <View
+                        android:id="@+id/line2"
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp" />
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/btn_nav_j"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        app:layout_widthPercent="100%h">
+                        app:layout_widthPercent="110%h">
 
                         <ImageView
-                            android:id="@+id/iv_dh"
+                            android:id="@+id/iv_dh_j"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            app:layout_heightPercent="60%h"
+                            app:layout_widthPercent="60%h" />
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+
+                    <View
+                        android:id="@+id/line3"
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp" />
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/btn_nav_gs"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        app:layout_widthPercent="110%h">
+
+                        <ImageView
+                            android:id="@+id/iv_dh_gs"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             app:layout_heightPercent="60%h"
                             app:layout_widthPercent="60%h" />
                     </com.zhy.android.percent.support.PercentLinearLayout>
                 </com.zhy.android.percent.support.PercentLinearLayout>
-
-                <View
-                    android:id="@+id/line2"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp" />
-
-                <com.zhy.android.percent.support.PercentLinearLayout
-                    android:id="@+id/btn_nav_j"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    app:layout_widthPercent="110%h">
-
-                    <ImageView
-                        android:id="@+id/iv_dh_j"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        app:layout_heightPercent="60%h"
-                        app:layout_widthPercent="60%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
-
-                <View
-                    android:id="@+id/line3"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp" />
-
-                <com.zhy.android.percent.support.PercentLinearLayout
-                    android:id="@+id/btn_nav_gs"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    app:layout_widthPercent="110%h">
-
-                    <ImageView
-                        android:id="@+id/iv_dh_gs"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        app:layout_heightPercent="60%h"
-                        app:layout_widthPercent="60%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
-            </com.zhy.android.percent.support.PercentLinearLayout>
-        </LinearLayout>
-    </com.zhy.android.percent.support.PercentRelativeLayout>
+            </LinearLayout>
+        </com.zhy.android.percent.support.PercentRelativeLayout>
+    </FrameLayout>
 
     <com.zhy.android.percent.support.PercentRelativeLayout
         android:id="@+id/rl_daohang"
