--- a/mobile/src/main/res/layout/content_driving_cool_black_music.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_black_music.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/iv_prew"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@mipmap/ic_prev2"
+                android:src="@mipmap/ic_prev2_b"
                 app:layout_heightPercent="50%h"
                 app:layout_widthPercent="50%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
@@ -54,7 +54,7 @@
                 android:id="@+id/iv_play"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@mipmap/ic_play2"
+                android:src="@mipmap/ic_play2_b"
                 app:layout_heightPercent="50%h"
                 app:layout_widthPercent="50%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
@@ -70,7 +70,7 @@
                 android:id="@+id/iv_next"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@mipmap/ic_next2"
+                android:src="@mipmap/ic_next2_b"
                 app:layout_heightPercent="50%h"
                 app:layout_widthPercent="50%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
