--- a/mobile/src/main/res/layout/content_all_app.xml
+++ b/mobile/src/main/res/layout/content_all_app.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
@@ -9,6 +8,5 @@
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3"
-        app:layout_marginPercent="5%h" />
-</com.zhy.android.percent.support.PercentFrameLayout>
+        android:numColumns="3" />
+</FrameLayout>
