--- a/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
@@ -21,6 +21,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|right"
+            android:lineSpacingExtra="2dp"
             android:text="0.0\n0.0"
             android:textColor="#fff"
             app:layout_textSizePercent="25%h" />
@@ -31,6 +32,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|right"
+            android:lineSpacingExtra="2dp"
             android:text="0.0\n0.0"
             android:textColor="#fff"
             app:layout_textSizePercent="25%h" />
@@ -62,6 +64,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|left"
+            android:lineSpacingExtra="2dp"
             android:text="0.0\n0.0"
             android:textColor="#fff"
             app:layout_textSizePercent="25%h" />
@@ -72,6 +75,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|left"
+            android:lineSpacingExtra="2dp"
             android:text="0.0\n0.0"
             android:textColor="#fff"
             app:layout_textSizePercent="25%h" />
