--- a/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
@@ -12,72 +12,61 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:orientation="vertical"
-        app:layout_widthPercent="40%w"
+        app:layout_widthPercent="45%w"
         tools:ignore="RtlHardcoded">
 
-        <com.wow.carlauncher.common.view.PhilTextView
+        <TextView
             android:id="@+id/tv_lf"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:background="@color/color_red"
             android:gravity="center_vertical|right"
             android:lineSpacingExtra="2dp"
-            android:text="0.0\n0.0"
+            android:text="2.1\n16°"
             android:textColor="#fff"
-            app:layout_textSizePercent="25%h" />
+            app:layout_textSizePercent="20%h" />
 
-        <com.wow.carlauncher.common.view.PhilTextView
+        <TextView
             android:id="@+id/tv_lb"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|right"
             android:lineSpacingExtra="2dp"
-            android:text="0.0\n0.0"
+            android:text="2.1\n16°"
             android:textColor="#fff"
-            app:layout_textSizePercent="25%h" />
+            app:layout_textSizePercent="20%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
-
-    <!--<ImageView-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_alignParentTop="true"-->
-    <!--android:layout_centerHorizontal="true"-->
-    <!--android:scaleType="centerInside"-->
-    <!--android:src="@mipmap/driving_black_tp_car"-->
-    <!--app:layout_marginBottomPercent="10%h"-->
-    <!--app:layout_marginTopPercent="10%h"-->
-    <!--app:layout_widthPercent="20%w" />-->
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:orientation="vertical"
-        app:layout_widthPercent="40%w"
+        app:layout_widthPercent="45%w"
         tools:ignore="RtlHardcoded">
 
-        <com.wow.carlauncher.common.view.PhilTextView
+        <TextView
             android:id="@+id/tv_rf"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|left"
             android:lineSpacingExtra="2dp"
-            android:text="0.0\n0.0"
+            android:text="2.1\n16°"
             android:textColor="#fff"
-            app:layout_textSizePercent="25%h" />
+            app:layout_textSizePercent="20%h" />
 
-        <com.wow.carlauncher.common.view.PhilTextView
+        <TextView
             android:id="@+id/tv_rb"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|left"
             android:lineSpacingExtra="2dp"
-            android:text="0.0\n0.0"
+            android:text="2.1\n16°"
             android:textColor="#fff"
-            app:layout_textSizePercent="25%h" />
+            app:layout_textSizePercent="20%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
