--- a/mobile/src/main/res/layout/content_driving_cool_black.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_black.xml
@@ -89,29 +89,13 @@
                 android:layout_height="0dp"
                 android:layout_weight="28">
 
-                <com.zhy.android.percent.support.PercentLinearLayout
+                <com.wow.carlauncher.view.activity.driving.coolBlack.TpView
                     android:id="@+id/ll_tp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="胎压"
-                        android:textColor="#ccc"
-                        app:layout_heightPercent="20%h"
-                        app:layout_textSizePercent="12%h" />
-
-                    <com.wow.carlauncher.view.activity.driving.coolBlack.TpView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        app:layout_heightPercent="80%h"
-                        app:layout_marginLeftPercent="10%h"
-                        app:layout_marginRightPercent="10%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
+                    android:layout_height="0dp"
+                    app:layout_heightPercent="80%h"
+                    app:layout_marginLeftPercent="10%h"
+                    app:layout_marginRightPercent="10%h" />
 
                 <ImageView
                     android:id="@+id/iv_navicon"
@@ -131,29 +115,11 @@
                 android:layout_height="0dp"
                 android:layout_weight="28">
 
-                <com.zhy.android.percent.support.PercentLinearLayout
+
+                <com.wow.carlauncher.view.activity.driving.coolBlack.MusicView
                     android:id="@+id/ll_music"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="音乐"
-                        android:textColor="#ccc"
-                        app:layout_heightPercent="20%h"
-                        app:layout_textSizePercent="12%h" />
-
-                    <com.wow.carlauncher.view.activity.driving.coolBlack.MusicView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        app:layout_heightPercent="80%h"
-                        app:layout_marginLeftPercent="10%h"
-                        app:layout_marginRightPercent="10%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
+                    android:layout_height="match_parent" />
 
                 <com.zhy.android.percent.support.PercentLinearLayout
                     android:id="@+id/ll_navinfo"
