--- a/mobile/src/main/res/layout/content_l_prompt.xml
+++ b/mobile/src/main/res/layout/content_l_prompt.xml
@@ -36,6 +36,13 @@
         <!--app:layout_heightPercent="50%h" />-->
         <!--</com.zhy.android.percent.support.PercentRelativeLayout>-->
 
+        <ImageView
+            android:id="@+id/iv_location"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/app_name"
+            android:visibility="gone"
+            app:layout_widthPercent="100%h" />
 
         <ImageView
             android:id="@+id/iv_carinfo_tp"
@@ -57,13 +64,6 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/app_name"
             app:layout_widthPercent="100%h" />
-
-        <!--<ImageView-->
-        <!--android:id="@+id/iv_ble"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:contentDescription="@string/app_name"-->
-        <!--app:layout_widthPercent="100%h" />-->
 
         <ImageView
             android:id="@+id/iv_wifi"
