增加导航弹出框

--- a/mobile/src/main/res/layout/content_set_app.xml
+++ b/mobile/src/main/res/layout/content_set_app.xml
@@ -165,11 +165,11 @@
         android:textSize="14sp" />
 
     <!--<com.wow.carlauncher.common.view.SetView-->
-        <!--android:id="@+id/time_plugin_open_app_select"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--st:titleEx="时间位置点击打开的APP"-->
-        <!--st:type="buttonB" />-->
+    <!--android:id="@+id/time_plugin_open_app_select"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--st:titleEx="时间位置点击打开的APP"-->
+    <!--st:type="buttonB" />-->
 
     <!--<View style="@style/Interval" />-->
 
@@ -179,6 +179,26 @@
         android:layout_height="wrap_content"
         st:titleEx="天气定位"
         st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_gaode_chajian"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="高德插件(4*3)"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_use_navc_popup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:summary="@string/set_yes"
+        st:summary2="@string/set_no"
+        st:titleEx="导航弹出窗"
+        st:type="switchB" />
 
     <View style="@style/Interval" />
 
